<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthActivity">

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="223dp"
        android:layout_marginStart="94dp"
        android:text="@string/send" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button7"
        android:layout_alignParentTop="true"
        android:layout_marginTop="129dp"
        android:ems="10"
        android:hint="@string/enter_the_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button7"
        android:layout_alignParentTop="true"
        android:layout_marginTop="205dp"
        android:ems="10"
        android:hint="@string/enter_the_text"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="269dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/messaging"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="40sp" />
</RelativeLayout>